# submissions

./: .gitignore  LICENSE  README.md  dev-requirements.txt  pyproject.toml
submissions/: __init__.py
