[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "ou-cs3560-submissions"
authors = [{name = "Krerkkiat Chusap", email = "contact@kchusap.com"}]
readme = "README.md"
dynamic = ["version", "description"]
classifiers=[
    "Development Status :: 1 - Planning",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Topic :: Utilities",
    "Intended Audience :: Developers",
    "Intended Audience :: Education"
]
requires-python = ">=3.10"
dependencies = []


[project.optional-dependencies]
test = [
    "coverage",
    "pytest",
    "pytest-cov",
    "pytest-mock",
    "sphinx",
    "black"
]


[project.urls]
Home = "https://github.com/OU-CS3560/submissions"

[tool.flit.module]
name = "submissions"
